# rivermind

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  quickstart-claude.md
scripts/: smoke_claude.sh
src/rivermind/: __main__.py  _broken.py  cli.py
src/rivermind/adapters/extractors/: anthropic.py  openai.py
src/rivermind/adapters/stores/: migrations.py  sqlite.py
src/rivermind/adapters/stores/migrations/: 001_initial.sql  002_reeval_runs.sql
src/rivermind/adapters/transports/: mcp.py
src/rivermind/core/: engine.py  ids.py  interfaces.py  models.py  reeval.py
src/rivermind/core/projectors/: compaction.py  narrative.py  state.py
src/rivermind/core/prompts/: narrative.md
tests/: conftest.py  test_broken.py  test_engine.py  test_interfaces.py  test_migration_001.py  test_migrations_runner.py  test_models.py  test_sqlite_store.py
tests/contract/: memory_store.py
tests/integration/: test_mcp_transport.py  test_migration_001.py  test_migrations_runner.py  test_reeval_e2e.py  test_reeval_startup.py  test_sqlite_store.py  test_state_rebuild.py
tests/unit/: test_anthropic_extractor.py  test_cli.py  test_compaction.py  test_engine.py  test_ids.py  test_interfaces.py  test_models.py  test_narrative_synthesizer.py  test_openai_extractor.py  test_reeval.py  test_smoke.py  test_state_projector.py
