[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rivermind"
version = "0.1.0"
description = "Temporal memory layer for LLMs, delivered as an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Ragib Ahashan", email = "ahashanragib@gmail.com" },
]
keywords = ["mcp", "llm", "memory", "temporal", "event-sourcing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "click>=8.1",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "pydantic>=2.6",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.30",
    "openai>=1.0",
]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
llm = ["anthropic>=0.30", "openai>=1.0"]

[project.scripts]
rivermind = "rivermind.cli:main"

[project.urls]
Homepage = "https://github.com/rivermind-ai/rivermind"
Repository = "https://github.com/rivermind-ai/rivermind"
Issues = "https://github.com/rivermind-ai/rivermind/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rivermind"]

[tool.hatch.build.targets.sdist]
include = [
    "src/rivermind",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=rivermind",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/rivermind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
